cmake_minimum_required (VERSION 3.0.0)
project (chapter16)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

configure_file(tq-data.sample tq-data.txt COPYONLY)

add_executable (ch16-01 ch16-01.cpp)
add_executable (ch16-02 ch16-02.cpp)
add_executable (ch16-03 ch16-03.cpp)
add_executable (ch16-04 ch16-04.cpp)
add_executable (ch16-05 ch16-05.cpp)
add_executable (ch16-06 ch16-06.cpp)
add_executable (ch16-07 ch16-07.cpp)
add_executable (ch16-08 ch16-08.cpp)
add_executable (ch16-09 ch16-09.cpp)
add_executable (ch16-10 ch16-10.cpp)
add_executable (ch16-11 ch16-11.cpp)
add_executable (ch16-12-13 ch16-12-13.cpp)
add_executable (ch16-14-15 ch16-14-15.cpp)
add_executable (ch16-16 ch16-16.cpp)
add_executable (ch16-17-18 ch16-17-18.cpp)
add_executable (ch16-19 ch16-19.cpp)
add_executable (ch16-20 ch16-20.cpp)
add_executable (ch16-21 ch16-21.cpp)
add_executable (ch16-22-23 ch16-22-23.cpp)
add_executable (ch16-24 ch16-24.cpp)
add_executable (ch16-25 ch16-25.cpp)
add_executable (ch16-26 ch16-26.cpp)
add_executable (ch16-27 ch16-27.cpp)
add_executable (ch16-28 ch16-28.cpp)
add_executable (ch16-29-30 ch16-29-30.cpp)
add_executable (ch16-31 ch16-31.cpp)
add_executable (ch16-32-to-39 ch16-32-to-39.cpp)

add_executable (ch16-40 ch16-40.cpp)
add_executable (ch16-41 ch16-41.cpp)        
add_executable (ch16-47 ch16-47.cpp)        
add_executable (ch16-48 ch16-48.cpp)        
add_executable (ch16-49-50 ch16-49-50.cpp)        
add_executable (ch16-51-52 ch16-51-52.cpp)        
add_executable (ch16-53-to-55 ch16-53-to-55.cpp)        
add_executable (ch16-56 ch16-56.cpp)        
add_executable (ch16-60-61 ch16-60-61.cpp)        
add_executable (ch16-62 ch16-62.cpp)        
add_executable (ch16-63-64 ch16-63-64.cpp)        